[package]
name = "arnold-rs"
version = "0.1.0"
authors = ["fredrik.brannbacka <fredrik.brannbacka@gmail.com>"]
description = "Rust bindings for the Arnold raytracing API"
repository = "https://github.com/smaragden/arnold-rs"
license = "MIT"
#build = "build.rs"

[build-dependencies]
bindgen = "0"
regex = "1"

[lib]
name = "arnold_rs"
path = "src/lib.rs"

[[bin]]
name = "kick"
path = "src/bin/kick.rs"
